Revert "To fix infinite loop, moved challenges from subview to main view"
This reverts commit 62f833eb572acc90f70b8aafb337a1410020ebfe.

--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -17,7 +17,7 @@
         <material-button ui-sref="message" ng-class="{'material-theme-orange':$uiRoute}" ui-route="/message">
             Messages
         </material-button>
-        <material-button ui-sref="challengesList({ tag : 'all' })" ng-class="{'material-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
+        <material-button ui-sref="challenges.list({ tag : 'all' })" ng-class="{'material-theme-indigo':$uiRoute}" ui-route="/challenges/[a-z]*">
             Challenges
         </material-button>
         <material-button ui-sref="projects.list({ tag : 'all' })" ng-class="{'material-theme-light':$uiRoute}" ui-route="/projects/all">
