--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -43,7 +43,7 @@
 
                     <div layout="horizontal">
                         <material-button ui-sref="challenge({pid : challenge.accessUrl})" class="material-button-raised material-button-colored">Take a look</material-button>
-                        <material-button ui-sref="challengesList({tag : 'all'})" class="material-button-raised material-button-colored">See more challenges</material-button>
+                        <material-button ui-sref="challenges.list({tag : 'all'})" class="material-button-raised material-button-colored">See more challenges</material-button>
                     </div>
                 </article>
             </section>
