updated and improved carrosel

--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -1,5 +1,5 @@
 <material-content style="overflow-x:hidden;" class="my-carousel">
-    <ul rn-carousel rn-carousel-control="" class="my-carousel">
+    <ul rn-carousel rn-carousel-controls rn-carousel-auto-slide="5" class="my-carousel">
         <li class="my-carousel" ng-repeat="challenge in challenges" >
             <section class="carousel-home center my-carousel" ng-if="challenge.intro == 1">
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
