Got right sidenav to work

--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -60,7 +60,7 @@
 
 
     </article>
-    <form name="signupForm"  ng-controller="RegisterCtrl"  flex-sm="50" ng-submit="registerUser(signup)" style="margin:auto;width:80%;">
+    <form name="signupForm" id="signupForm" ng-controller="RegisterCtrl"  flex-sm="50" ng-submit="registerUser(signup)" style="margin:auto;width:80%;">
         <div class="center">
             <img src="images/svg/Joinus.svg" alt="Join Us"/>
         </div>
