--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -1,4 +1,3 @@
-
 .my-carousel{
   height: 100%!important;
 }
@@ -11,7 +10,6 @@
   background-color:rgb(21,38,97);
   padding:20px;
   color:white;
-
 }
 
 .rn-carousel-control{
@@ -20,3 +18,6 @@
   font-size : 5em !important;
 }
 
+#signupForm {
+	padding: 20px 0 20px 0;
+}
