--- a/client/app/modules/header/sass/header.scss
+++ b/client/app/modules/header/sass/header.scss
@@ -34,10 +34,14 @@
 }
 
 .menu {
+  padding: 10px;
+  
   material-button {
     width: 100%;
     margin-left: 10px;
     text-align: right;
     padding-right: 15px;
   }
+
+
 }
