--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -211,11 +211,13 @@ textarea {
 .img-rounded {
   border-radius: 100%; }
 
-.menu material-button {
-  width: 100%;
-  margin-left: 10px;
-  text-align: right;
-  padding-right: 15px; }
+.menu {
+  padding: 10px; }
+  .menu material-button {
+    width: 100%;
+    margin-left: 10px;
+    text-align: right;
+    padding-right: 15px; }
 
 .main-footer {
   background-color: black; }
