Fixed error message after login

--- a/client/app/modules/auth/templates/signin.tpl.html
+++ b/client/app/modules/auth/templates/signin.tpl.html
@@ -29,7 +29,7 @@
                 <span class="faa-spin animated" ng-if="loader['email']">
                     <i class="fa fa-2x fa-spinner"></i>
                 </span>
-                <i class="fa fa-sign-in">Sign-in</i>
+                <i class="fa fa-sign-in"> Sign In</i>
             </material-button>
         </div>
         <!--
