--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -70,7 +70,7 @@
         </material-input-group>
         <div ng-messages="signupForm.username.$error" ng-if="!signupForm.username.$pristine">
             <div ng-message="required" class="form-message">
-                username is required
+                Username is required
             </div>
         </div>
         <material-input-group>
@@ -79,7 +79,7 @@
         </material-input-group>
         <div ng-messages="signupForm.email.$error" ng-if="!signupForm.email.$pristine">
             <div ng-message="required" class="form-message">
-                email is required
+                Email is required
             </div>
         </div>
         <tag-manager entity="signup"></tag-manager>
@@ -89,7 +89,7 @@
         </material-input-group>
         <div ng-messages="signupForm.password.$error" ng-if="!signupForm.password.$pristine">
             <div ng-message="required" class="form-message">
-                password is required
+                Password is required
             </div>
         </div>
         <material-input-group >
@@ -98,7 +98,7 @@
         </material-input-group>
         <div ng-messages="signupForm.passwordR.$error" ng-if="!signupForm.passwordR.$pristine">
             <div ng-message="required" class="form-message">
-                password is required
+                Password is required
             </div>
         </div>
         <div>
@@ -120,10 +120,12 @@
         </material-checkbox>
         <div ng-messages="signupForm.read.$error" ng-if="!signupForm.passwordR.$pristine">
             <div ng-message="required" class="form-message">
-                you must check the box
+                You must check the box
             </div>
         </div>
         <material-button style="width:100%;" class="material-button-raised" type="submit" ng-disabled="signupForm.$invalid">Register</material-button>
-    </form>    <!--<ng-include src="'modules/footer/templates/footer.tpl.html'"></ng-include>-->
+    </form>    
+
+    <!--<ng-include src="'modules/footer/templates/footer.tpl.html'"></ng-include>-->
 
 </material-content>
