--- a/client/app/modules/project/templates/modal/shareModal.tpl.html
+++ b/client/app/modules/project/templates/modal/shareModal.tpl.html
@@ -10,7 +10,7 @@
             <span>
                 Share this Url with your friends :
             </span>
-            <pre>http://ideaStorm.io/project/{{ pid }}</pre>
+            <pre>http://IdeaWeave.io/project/{{ pid }}</pre>
         </div>
     </material-content>
 </material-dialog>
