--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" layout-fill>
+<material-content layout="vertical" layout-fill>
     <material-toolbar scroll-shrink class="home-header"  style="background-image: url({{ challenge.banner || 'http://placehold.it/900x150'  }}) !important;position : relative;">
         <div layout="vertical" class="content">
             <h1 style="margin: 0;">
@@ -39,4 +39,4 @@
         </section>
         <section ui-view="projectView"></section>
     </material-content>
-</section>
+</material-content>
