Fixed scrolling problems for projects

--- a/client/app/modules/admin/project/templates/projectSettings.tpl.html
+++ b/client/app/modules/admin/project/templates/projectSettings.tpl.html
@@ -1,6 +1,6 @@
-<section layout="vertical" >
+<material-content layout="vertical" >
     <material-tabs selected="selectedIndex" center>
-        <h2 class="center">{{ project.title }}'s administration</h2>
+        <h2 class="center">{{ project.title }} Administration</h2>
         <material-tab>
             <material-label>
                 <i class='fa fa-list'>Edit</i>
@@ -29,4 +29,4 @@
             <ng-include src="'modules/admin/project/templates/team.tpl.html'" ng-controller="ProjectTeamCtrl"></ng-include>
         </div>
     </div>
-</section>
+</material-content>
