--- a/client/app/modules/admin/project/templates/team.tpl.html
+++ b/client/app/modules/admin/project/templates/team.tpl.html
@@ -4,7 +4,7 @@
             Team Management
         </h2>
         <div ng-if="project.members.length == 0 || !project.members" class="center">
-            You're alone in your project lets invite some folks !
+            You're alone in your project. Lets invite some folks!
         </div>
         <div>
             <material-button ng-click="inviteModal($event)" style="width:100%">
