--- a/client/app/modules/challenge/templates/suggest.tpl.html
+++ b/client/app/modules/challenge/templates/suggest.tpl.html
@@ -4,7 +4,7 @@
             <material-toolbar layout="horizontal">
                 <div class="material-toolbar-tools">
                     <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
-                    <h>Challenge us!</div>
+                    <i class="fa fa-lightbulb-o"> Challenge us!</i>
                 </div>
             </material-toolbar>
             <aside>
