--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -4,7 +4,7 @@
             <section class="carousel-home center my-carousel" ng-if="challenge.intro == 1">
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
                 <h1>
-                    Ideaweave is a plateform for exchanging ideas and forming groups around exciting projects and solve problems.
+                    Ideaweave is a platform for exchanging ideas and forming groups around exciting projects and solve problems.
                 </h1>
                 <article hide block-md>
                     <p>
