Removed github login (not working)

--- a/client/app/modules/auth/templates/signin.tpl.html
+++ b/client/app/modules/auth/templates/signin.tpl.html
@@ -29,7 +29,7 @@
                 <span class="faa-spin animated" ng-if="loader['email']">
                     <i class="fa fa-2x fa-spinner"></i>
                 </span>
-                <i class="fa fa-sign-in"> Sign In</i>
+                <i class="fa fa-sign-in"> Sign In with Email</i>
             </material-button>
         </div>
         <!--
@@ -39,6 +39,7 @@
             </material-button>
         </div>
         -->
+        <!--
         <div>
             <material-button class="material-button-raised material-theme-indigo" ng-click="authenticate('github')">
                 <span class="faa-spin animated" ng-if="loader['github']">
@@ -48,9 +49,10 @@
                 <i class="fa fa-github">Sign in with GitHub</i>
             </material-button>
         </div>
-        <div>
+        -->
+        <div style="margin-top: 10px;">
             <material-button class="material-button-raised material-theme-red" ng-click="authenticate('google')">
-                <i class="fa fa-google">Sign in with Google</i>
+                <i class="fa fa-google"> Sign in with Google</i>
             </material-button>
         </div>
         <br/>
