Various fixes for challenge admin

--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -1,5 +1,5 @@
-<material-dialog style="background-color: transparent;">
-    <material-toolbar layout="horizontal" layout-align="">
+<material-dialog id="edit-poster-dialog">
+    <material-toolbar layout="horizontal">
         <div layout layout-align="start center">
             <div flex>Pick a poster image</div>
             <material-button class="material-button-fab"  ng-click="cancel()">
