--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
@@ -1,4 +1,4 @@
-<material-dialog>
+<material-dialog id="edit-banner-dialog">
     <material-toolbar layout="horizontal" layout-align="">
         <div layout layout-align="start center">
             <div flex>Pick a banner</div>
