--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -5,44 +5,48 @@
                 {{ challenge.title }}
             </h1>
             <h3>{{challenge.brief}}</h3>
-            <material-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
-                <i class="fa fa-pencil-square-o baseColor"></i> Edit
-            </material-button>
-            <div layout="horizontal">
-                <div>
-                    <span>
-                        {{ challenge.followers.length }}
-                    </span>
-                    <span class="text-muted">
-                        &nbsp;followers
-                    </span>
-                    <span>
-                        {{ challenge.projects.length }}
-                    </span>
-                    <span class="text-muted">
-                        &nbsp;projects
-                    </span>
-                </div>
+        </div>
+    </material-toolbar>
+
+    <div layout="vertical">
+        <material-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
+            <i class="fa fa-pencil-square-o baseColor"></i> Edit
+        </material-button>
+        <div layout="horizontal">
+            <div>
+                <span>
+                    {{ challenge.followers.length }}
+                </span>
+                <span class="text-muted">
+                    &nbsp;followers
+                </span>
+                <span>
+                    {{ challenge.projects.length }}
+                </span>
+                <span class="text-muted">
+                    &nbsp;projects
+                </span>
             </div>
-            <span>
-                <i class="fa fa-star baseColor" ng-if="isFollow"></i> Following
-            </span>
+        </div>
+        <span>
+            <i class="fa fa-star baseColor" ng-if="isFollow"></i> Following
+        </span>
             <!--<span ng-if="challenge.startDate < now && challenge.endDate > now" >-->
                 <!--<timer end-time="challenge.endDate" >End in :{{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>-->
             <!--</span>-->
             <!--<span ng-if="challenge.startDate > now" >-->
                 <!--<timer end-time="challenge.endDate" >Start in : {{days}} d, {{hours}} : {{minutes}} : {{seconds}}</timer>-->
             <!--</span>-->
-        </div>
+
         <material-button class="material-button-fab" ng-click="toggleLeft()" style="bottom:-24px;position:absolute; left:20px;z-index : inherit" hide-md>
             <i class="fa fa-bars"></i>
         </material-button>
         <material-button class="material-button-fab" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-if="!isOwner">
             <i class="fa" ng-class="{ 'fa-thumbs-up' : !isFollow, 'fa-thumbs-down' : isFollow }"></i>
         </material-button>
-    </material-toolbar>
+    </div>
 
-    <material-content flex >
+    <div flex>
         <showtags entity="challenge"></showtags>
         <section class="challenge-home" layout="vertical">
             <article class="html-content" flex ng-bind-html="challenge.home"></article>
@@ -55,5 +59,5 @@
         <section >
             <project-card inline-block project-id="project" ng-repeat="project in challenge.projects"></project-card>
         </section>
-    </material-content>
+    </div>
 </material-content>
