--- a/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
@@ -1,4 +1,4 @@
-<material-dialog>
+<material-dialog id="crop-poster-modal">
     <material-toolbar layout="horizontal" layout-align="">
         <div layout layout-align="start center">
             <span flex>Your profile page</span>
