--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -24,6 +24,7 @@ $baseColor : rgb(0, 51, 102);
 @import "../modules/home/sass/home";
 @import "../modules/d3/sass/d3";
 @import "../modules/admin/challenge/sass/adminChallenge";
+@import "../modules/admin/profile/sass/adminProfile";
 
 
 body,html{
