Fixed password change problems

--- a/client/app/modules/admin/profile/templates/edit.tpl.html
+++ b/client/app/modules/admin/profile/templates/edit.tpl.html
@@ -11,7 +11,7 @@
             </material-toolbar>
             <section layout="vertical">
                 <material-button ng-click="editPageModal()">
-                    Edit your personnal page
+                    Edit your personal page
                 </material-button>
                 <material-button ng-click="cropPosterModal()">
                     Change poster
