--- a/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/resetPassword.tpl.html
@@ -13,12 +13,16 @@
     <material-content>
         <form name='passf'>
             <material-input-group>
-                <label for="pass1">Your new Password</label>
-                <material-input type="password" id="pass1" ng-model="profile.password"></material-input>
+                <label for="currentPassword">Current Password</label>
+                <material-input type="password" id="currentPassword" ng-model="passwordInfo.currentPassword"></material-input>
             </material-input-group>
             <material-input-group>
-                <label for="pass2">Repeat your new password</label>
-                <material-input type="password" id="pass2" ng-model="profile.password2"></material-input>
+                <label for="newPassword">Your new Password</label>
+                <material-input type="password" id="newPassword" ng-model="passwordInfo.newPassword"></material-input>
+            </material-input-group>
+            <material-input-group>
+                <label for="newPassword2">Repeat your new password</label>
+                <material-input type="password" id="newPassword2" ng-model="passwordInfo.newPassword2"></material-input>
             </material-input-group>
         </form>
     </material-content>
