Fixing project admin

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -10,16 +10,16 @@
                 </div>
             </material-toolbar>
             <material-button ng-click="popUpEdit()">
-                Edit HomePage
+                Edit Home Page
             </material-button>
             <material-button ng-click="popUpPoster()">
-                edit Poster
+                Edit Poster
             </material-button>
             <material-button ng-click="popUpBanner()">
-                edit banner
+                Edit Banner
             </material-button>
             <material-button class="material-theme-red" ng-click="remove()">
-                delete
+                Delete
             </material-button>
         </material-content>
     </material-sidenav>
