--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -9,6 +9,9 @@
                     </div>
                 </div>
             </material-toolbar>
+            <material-button ui-sref="project.home({ pid : project.accessUrl })" class="material-theme-indigo">
+                View Challenge
+            </material-button>
             <material-button ng-click="popUpEdit()">
                 Edit Home Page
             </material-button>
