Fixed project banners

--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -1,5 +1,5 @@
 <material-content layout="vertical" layout-fill>
-    <material-toolbar scroll-shrink class="home-header"  style="background-image: url({{ challenge.banner || 'http://placehold.it/900x150'  }}) !important;position : relative;">
+    <material-toolbar scroll-shrink class="home-header"  style="background-image: url({{ project.banner || 'http://placehold.it/900x150'  }}) !important;position : relative;">
         <div layout="vertical" class="content">
             <h1 style="margin: 0;">
                 {{ project.title }}
