corrections on notes

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -10,7 +10,7 @@
                 </div>
             </material-toolbar>
             <material-button ui-sref="project.home({ pid : project.accessUrl })" class="material-theme-indigo">
-                View Challenge
+                View Project
             </material-button>
             <material-button ng-click="popUpEdit()">
                 Edit Home Page
