--- a/client/app/modules/admin/project/templates/projectSettings.tpl.html
+++ b/client/app/modules/admin/project/templates/projectSettings.tpl.html
@@ -8,7 +8,7 @@
         </material-tab>
         <material-tab>
             <material-label>
-                <i class='fa fa-cogs'>WorkSpace</i>
+                <i class='fa fa-cogs'>Workspace</i>
             </material-label>
         </material-tab>
         <material-tab>
