--- a/client/app/modules/workspace/comments/templates/commentModal.tpl.html
+++ b/client/app/modules/workspace/comments/templates/commentModal.tpl.html
@@ -10,5 +10,7 @@
             </material-button>
         </div>
     </material-toolbar>
-    <textarea ui-tinymce="tinymceOption" ng-model="commentValue" placeholder="I think..." required ></textarea>
+    <material-content>
+        <textarea ui-tinymce="tinymceOption" ng-model="commentValue" placeholder="I think..." required ></textarea>
+    </material-content>
 </material-dialog>
