--- a/client/app/modules/workspace/templates/notes.tpl.html
+++ b/client/app/modules/workspace/templates/notes.tpl.html
@@ -5,7 +5,7 @@
                 <div class="material-toolbar-tools">
                     <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
                     <div>
-                        <i class="fa fa-user"> publication</i>
+                        <i class="fa fa-user"> Publication</i>
                     </div>
                 </div>
             </material-toolbar>
