Fix team applications

--- a/client/app/modules/admin/project/templates/team.tpl.html
+++ b/client/app/modules/admin/project/templates/team.tpl.html
@@ -1,7 +1,7 @@
 <section layout="vertical" layout-md="horizontal" layout-md="space-between">
     <section layout="vertical" flex-md="60">
         <h2 class="center">
-            Team Management
+            Current Team
         </h2>
         <div ng-if="project.members.length == 0 || !project.members" class="center">
             You're alone in your project. Lets invite some folks!
@@ -17,7 +17,7 @@
     </section>
     <section layout="vertical" flex-md="40">
         <h2 class="center">
-            Apply Management
+            Applications
         </h2>
         <div class="apply-table" layout="vertical">
             <div layout="horizontal" class="tr" layout-align="center center">
