--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -5,7 +5,8 @@
     </section>
     <div class="row center" style="margin-top: 60px;padding-bottom: 30px;">
         <div class="btn-group">
-            <button class="btn btn-info" ng-click="openShare()">promote</button>
+            <material-button class="material-button-colored" ng-click="openApplyModal()">Join Project</material-button>
+            <material-button class="material-button-colored" ng-click="openShare()">Promote Project</material-button>
         </div>
     </div>
 </section>
